--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="nicksFlix">
   <head>
-    <title>Nick's Flicks</title>
+    <title>Nick's Flicks!!</title>
     <!-- and lib and ui router  -->
     <script src="lib/angular.js"></script>
     <script src="lib/angular-ui-router.js"></script>
