need to do more research not sure what im missing but its broken right now

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <script src="app.js"></script>
     <!--  conrollers -->
     <script src="controllers/ReviewsController.js"></script>
+    <script src="controllers/MoviesController.js"></script>
     <!-- factories  -->
     <script src="services/ReviewsFactory.js"></script>
+    <!-- directives -->
+    <!-- needed to toggle day night mode?  -->
+    <script src="directives/NightModeDirective.js"></script>
+
     <!-- link to bootstrap 3 and css  -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
